# ai4s-jobq

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: pr-review.yml  pypi-deployment.yml  testpypi-deployment.yml  tests.yml
ai4s/jobq/: __init__.py  aiomp.py  auth.py  blob.py  blob_stash.py  cli.py  entities.py  jobq.py  la_workspace.py  logging_utils.py  scheduled_events.py  skill_file.py  work.py
ai4s/jobq/backend/: common.py  servicebus.py  servicebus_rest.py  storage_queue.py
ai4s/jobq/data/skill/ai4s-jobq-cli/: SKILL.md
ai4s/jobq/data/skill/ai4s-jobq-cli/references/: api.md  basics.md  dead-lettering.md  deduplication.md  graceful-shutdown.md  large-objects.md  monitoring.md  preemption.md  workforce.md
ai4s/jobq/examples/: __init__.py
ai4s/jobq/ext/: amlt_utils.py  background_dirsync.py  map_in_config.py
ai4s/jobq/orchestration/: __init__.py  manager.py  multiregion_workforce.py  pid_file.py  workforce.py  workforce_monitor.py
ai4s/jobq/track/: app.py  config.py
ai4s/jobq/track/assets/: expand.js
ai4s/jobq/track/components/: active_environments.py  active_workers.py  cpu_utilization.py  env_efficiency.py  errors.py  preemption_events.py  preemptions_by_env.py  queue_size.py  ram_utilization.py  stat_cards.py  task_runtimes.py  tasks_completed.py  tasks_completed_trend.py  tasks_starting.py  worker_churn.py  worker_lifetime.py
ai4s/jobq/track/utils/: __init__.py  log_analytics.py
docs/: api.md  basics.md  basics.rst  conf.py  contributing.md  index.rst  md_compat.py  monitoring.md
docs/_static/: custom.css
docs/misc/: 00_dead-lettering.md  10-preemption.md  30-workforce.md  35-graceful-shutdown.md  40-deduplication.md  50-min-version.md  90-amulet.md  95-troubleshooting.md  preemption.md  workforce.md
scripts/: build_skill.py  check-docs-accessibility.sh
tests/: conftest.py  test_api.py  test_async.py  test_blob.py  test_cli.py  test_fork_deadlock.py  test_kill_subprocesses_kill_respective_task.py  test_lock_duration_bug.py  test_max_failures_shutdown.py  test_min_version.py  test_multiregion_workforce.py  test_multiregion_workforce_parallel_reads.py  test_orphan_kill.py  test_permanent_task_failure.py  test_preemption_resume.py  test_scheduled_events.py  test_servicebus.py  test_servicebus_deadletter.py  test_servicebus_lock_renewal.py  test_servicebus_replace.py  test_servicebus_rest.py  test_workforce_parallel.py  test_workforce_retry.py
vale-styles/JobQ/: Headings.yml  Latin.yml
vale-styles/config/vocabularies/JobQ/: accept.txt
