[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[project]
name = "ai4s-jobq"

dynamic = ["version"]
requires-python = ">=3.10"

description = "AI for Science Job Queue - A distributed job queue system for large scale embarassingly parallel workloads"
readme = "README.md"

dependencies = [
  "aiohttp",
  "rich",
  "asyncclick < 8.2.2",  # pinned because 8.2.2 suddenly requires Python 3.11
  "azure-identity",
  "azure-monitor-opentelemetry >= 1.8.7",
  "azure-storage-blob",
  "azure-storage-queue",
  "psutil",
  "types-python-dateutil",
  "joblib",   # implicit dependency of utilities
  "anyio",   # implicit dependency of asyncclick
  "pyyaml",
  "cachetools",
  "azure-servicebus",
  "appdirs",
  "tenacity",
  "humanize",
]

urls.repository = "https://github.com/microsoft/ai4s-jobq"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.optional-dependencies]
dev = [
    "tox", "tox-conda", "pytest", "pytest-asyncio", "pytest-mock", "wait-for-it", "types-psutil", "types-cachetools", "pandas-stubs", "plotly-stubs", "mypy", "ruff",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "toml",
    "types-toml",
    "myst-parser",
    "sphinx-sitemap",
    "sphinx-prompt",
    "sphinx-copybutton",
    "sphinx_markdown_builder",
]
workforce = [
    "azure-ai-ml", "pydantic",
]
track = [
  "dash_bootstrap_components",
  "dash",
  "pandas",
  "azure-monitor-query",
  "azure-mgmt-resourcegraph",
  "azure-mgmt-loganalytics",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["ai4s", "ai4s.*", "ai4s.jobq", "ai4s.jobq.*", "ai4s.jobq.data", "ai4s.jobq.data.*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = true

[tool.setuptools.package-data]
"ai4s.jobq" = ["py.typed", "ai4s/jobq/track/assets/*"]
"ai4s.jobq.data.skill" = ["**/*"]

[tool.mypy]
strict_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = [
  "amlt.*",
  "utilities.*",
  "dash.*",
  "opencensus.*",
  "ai4s.jobq.ext.amlt_utils",
  "azure.servicebus.*",
  "azure.data.tables.*",
  "azure.monitor.query.*",
  "azure.mgmt.loganalytics.*",
  "azure.mgmt.resourcegraph.*",
  "opencensus.ext.azure.*",
  "appdirs",
  "dash_bootstrap_components.*",
  "yaml",
  "opentelemetry.*",
  "humanize",
  "requests",
  "monty.*",
  "pydantic",
  "azure.ai.ml",
  "azure.ai.ml.*",
  "plotly.*",
]
disallow_untyped_calls = false
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "opentelemetry.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
  "ai4s.jobq.track.*",
]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
  "ai4s.jobq.la_workspace",
]
warn_unused_ignores = false  # azure-mgmt-resourcegraph stubs vary across versions

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"

[project.scripts]
ai4s-jobq = "ai4s.jobq.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "W",      # pycodestyle warnings
  "I",      # isort
  "UP",     # pyupgrade (modernize to 3.10+)
  "B",      # flake8-bugbear (common bugs)
  "S",      # flake8-bandit (security)
  "SIM",    # flake8-simplify
  "RUF",    # Ruff-specific rules
  "C4",     # flake8-comprehensions
  "T20",    # flake8-print (no stray prints)
  "PT",     # flake8-pytest-style
  "PLC",    # Pylint convention
  "PLE",    # Pylint errors
  "PLW",    # Pylint warnings
  "N",      # pep8-naming
  "ASYNC",  # async-specific lints
  "TCH",    # type-checking imports
  "PIE",    # flake8-pie (misc. lints)
  "RSE",    # flake8-raise
  "RET",    # flake8-return
  "FLY",    # flynt (f-string conversion)
  "PERF",   # perflint (performance)
  "LOG",    # flake8-logging
  "G",      # flake8-logging-format
]
ignore = [
  "S101",    # assert — allowed in tests
  "G004",    # logging-f-string — common pattern in this codebase
  "RET504",  # unnecessary-assign — sometimes aids readability
  "UP035",   # deprecated-import — some still needed for 3.10 compat
  "PLC0415", # import-outside-top-level — lazy imports are intentional (heavy Azure SDKs)
  "N815",    # mixed-case-variable-in-class-scope — Azure SDK uses camelCase fields
  "PERF203", # try-except-in-loop — sometimes unavoidable in retry/polling patterns
  "E501",    # line-too-long — handled by ruff format; remaining are URLs/strings
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # assert is the point of tests
  "S105",    # hardcoded passwords — test connection strings
  "S106",    # hardcoded passwords — test connection strings
  "S107",    # hardcoded passwords — test connection strings
  "S110",    # try-except-pass OK in test cleanup
  "S311",    # pseudo-random OK in tests
  "S603",    # subprocess OK in tests
  "T201",    # print OK in tests
  "PLW0603", # global statement OK in test fixtures
  "ASYNC220",# subprocess in async OK in tests
  "ASYNC240",# sync path ops (read_text, getsize) OK in tests
]
"ai4s/jobq/cli.py" = ["T201", "S603", "S607", "ASYNC220"]  # CLI runs subprocesses
"ai4s/jobq/track/**/*.py" = ["T201"]  # print OK in dashboard
"ai4s/jobq/work.py" = [
  "S603",    # subprocess — job queue intentionally runs subprocesses
  "S602",    # subprocess shell — needed for shell commands
  "S607",    # partial path — intentional for user commands
  "ASYNC220",# subprocess in async — by design
]
"ai4s/jobq/orchestration/**/*.py" = [
  "S603", "S602", "S607",  # subprocess — orchestration runs commands
  "S311",                  # pseudo-random for jitter — not cryptographic
  "ASYNC220",              # subprocess in async — by design
]
"ai4s/jobq/blob.py" = [
  "S324",    # md5 for content hashing, not security
  "S301",    # pickle — intentional for serialization
  "ASYNC230",# blocking open in async — existing pattern
  "ASYNC240",# sync path ops (getsize, relpath, abspath) — not blocking I/O
  "SIM115",  # context manager for open — async compat
]
"ai4s/jobq/blob_stash.py" = [
  "S324",    # md5 for content hashing, not security
  "S301",    # pickle — intentional for serialization
]
"ai4s/jobq/entities.py" = ["S324"]  # md5 for deterministic IDs, not security
"ai4s/jobq/ext/**/*.py" = ["S602", "S603", "S607", "ASYNC230"]  # extensions run subprocesses
"ai4s/jobq/la_workspace.py" = ["S603", "S607"]  # subprocess calls for CLI tools
"ai4s/jobq/logging_utils.py" = ["PLW0603", "T201"]  # global for filter management; print for raw task output
"ai4s/jobq/skill_file.py" = ["N806"]  # LOG variable name is conventional
"ai4s/jobq/orchestration/workforce_monitor.py" = ["N806"]  # env var names as constants
"scripts/**/*.py" = ["T201", "S603", "S602", "S607"]  # scripts use print and subprocess
"bench.py" = ["T201", "S603"]  # benchmark script
"diamond_*.py" = ["T201", "S110", "S603"]  # example scripts

[tool.ruff.lint.isort]
known-third-party = ["amlt", "wandb"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.doc8]
max-line-length = 100
paths = ["docs"]
